--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			</div>
 			<ul class="hander_nav">
 				<li class="hander_nav_li">
-				<a href="depth.html">
+				<a href="test2.html">
 					<span>独家深度</span>
 				</a>
 					<img alt="" src="images/index_icon_bottom.png">
@@ -31,7 +31,7 @@
 						</li>
 					</ul>
 				</li>
-				<li class="hander_nav_li"><a href="destination.html"><span>目的地</span></a></li>
+				<li class="hander_nav_li"><a href="test.html"><span>目的地</span></a></li>
 				<li class="hander_nav_li">
 					<a href="community.html"><span>社区</span></a>
 					<img alt="" src="images/index_icon_bottom.png">
@@ -59,11 +59,9 @@
 						</li>
 					</ul>
 				</li>
-				<li class="hander_nav_li"><a href="questions.html"><span>穷游问答</span></a></li>
-				<li class="hander_nav_li"><a href="air.html"><span>机票</span></a></li>
-				<li class="hander_nav_li">
-					<a href="hotel.html"><span>酒店.民宿</span></a>
-					<img alt="" src="images/index_icon_bottom.png">
+				<li class="hander_nav_li"><a href="questions.html"><span>云高黎贡问答</span></a></li>
+
+					
 					<ul class="hander_nav_li_ul">
 						<li>
 							<span>酒店</span>
@@ -77,17 +75,17 @@
 					</ul>
 				</li>
 				<li class="hander_nav_li">
-					<a href="app.html"><span>穷游APP</span></a>
+					<a href="app.html"><span>云高黎贡</span></a>
 					<img alt="" src="images/index_icon_bottom.png">
 					<ul class="hander_nav_li_ul">
 						<li>
-							<span>穷游APP</span>
+							<span>云高黎贡公众号</span>
 						</li>
 						<li>
-							<span>行程助手APP</span>
+							<span>微信小程序</span>
 						</li>
 						<li>
-							<span>穷游锦囊APP</span>
+							<span>锦囊APP</span>
 						</li>
 					</ul>
 				</li>
@@ -131,18 +129,18 @@
 
 			<div class="text_paint">
 				<span><em>2</em> / 4</span>
-				<p>从本州骑到四国，漫步兔子岛、猫咪街，在空中为濑户大桥庆生</p>
+				<p>从本州骑到四国，漫步兔子岛、猫咪街，在空中为上刀山下火海</p>
 				<span>磨人哒小栗砸</span>
 			</div>
 			<div class="text_paint">
 				<span><em>3</em> / 4</span>
 				<p>穷游锦囊 | 复活节岛</p>
-				<span>在距大陆最遥远的岛屿，与巨石像有个秘密约会</span>
+				<span>在距高黎贡上有个秘密约会</span>
 			</div>
 			<div class="text_paint">
 				<span><em>4</em> / 4</span>
 				<p>穷游锦囊 | 复活节岛</p>
-				<span>在距大陆最遥远的岛屿，与巨石像有个秘密约会</span>
+				<span>在距高黎贡上有个秘密约会</span>
 			</div>
 
 
