--- a/index.html
+++ b/index.html
@@ -1413,7 +1413,7 @@
 					<ul>
 						<li>
 							<img src="images/index_ma1.png" alt="">
-							<span>穷游网</span>
+							<span>云高黎贡</span>
 						</li>
 						<li>
 							<img src="images/index_ma2.png" alt="">
