--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<div class="hander">
 		<div class="hander_han">
 			<div class="hander_logo">
-			<a href="index.html"><img alt="" src="images/index_logo.png"></a>
+			<a href="index.html"><img alt="" src="images/index_logo.png" ></a>
 			</div>
 			<ul class="hander_nav">
 				<li class="hander_nav_li">
@@ -1395,7 +1395,7 @@
 					<span>穷游APP</span>
 					<ul>
 						<li>
-							<img src="images/index_logo1.png" alt="">
+							<img src="images/index_logo1.jpg" width="160" height="160" alt="">
 							<span>穷游app</span>
 						</li>
 						<li>
