--- a/app.html
+++ b/app.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>穷游APP</title>
+	<title>云高黎贡</title>
 	<link rel="stylesheet" href="css/app.css">
 	<link rel="stylesheet" href="css/nav_style.css">
 </head>
@@ -17,7 +17,7 @@
 		<div class="h_center">
 			<ul class="nav">
 				<li>
-					<a href="depth.html">
+					<a href="test2.html">
 						<span>独家深度</span>
 						<span class="s_icon">
 							<img src="images/s_icon.png" alt="">
@@ -33,7 +33,7 @@
 					</div>
 				</li>
 				<li>
-					<a href="destination.html">
+					<a href="test.html">
 						<span>目的地</span>
 					</a>
 				</li>
@@ -61,35 +61,15 @@
 					</a>
 				</li>
 				<li>
-					<a href="air.html">
-						<span>机票</span>
-					</a>
-				</li>
-				<li>
-					<a href="hotel.html">
-						<span>酒店/民宿</span>
-						<span class="s_icon">
-							<img src="images/s_icon.png" alt="">
-						</span>
-					</a>
-					<div class="h_menu">
-						<ul>
-							<li>酒店</li>
-							<li>爱彼迎</li>
-							<li>华人旅馆</li>
-						</ul>
-					</div>
-				</li>
-				<li>
 					<a href="app.html">
-						<span>穷游app</span>
+						<span>云高黎贡</span>
 						<span class="s_icon">
 							<img src="images/s_icon.png" alt="">
 						</span>
 					</a>
 					<div class="h_menu">
 						<ul>
-							<li>穷游App</li>
+							<li>云高黎贡</li>
 							<li>行程助手App</li>
 							<li>穷游锦囊App</li>
 						</ul>
