--- a/questions.html
+++ b/questions.html
@@ -39,7 +39,7 @@
 		<div class="h_center">
 			<ul class="nav">
 				<li>
-					<a href="depth.html">
+					<a href="test2.html">
 						<span>独家深度</span>
 						<span class="s_icon">
 							<img src="images/s_icon.png" alt="">
@@ -55,7 +55,7 @@
 					</div>
 				</li>
 				<li>
-					<a href="destination.html">
+					<a href="test.html">
 						<span>目的地</span>
 					</a>
 				</li>
@@ -82,36 +82,16 @@
 						<span>旅游问答</span>
 					</a>
 				</li>
-				<li>
-					<a href="air.html">
-						<span>机票</span>
-					</a>
-				</li>
-				<li>
-					<a href="hotel.html">
-						<span>酒店/民宿</span>
-						<span class="s_icon">
-							<img src="images/s_icon.png" alt="">
-						</span>
-					</a>
-					<div class="h_menu">
-						<ul>
-							<li>酒店</li>
-							<li>爱彼迎</li>
-							<li>华人旅馆</li>
-						</ul>
-					</div>
-				</li>
-				<li>
+
 					<a href="app.html">
-						<span>穷游app</span>
+						<span>云高黎贡</span>
 						<span class="s_icon">
 							<img src="images/s_icon.png" alt="">
 						</span>
 					</a>
 					<div class="h_menu">
 						<ul>
-							<li>穷游App</li>
+							<li>公众号</li>
 							<li>行程助手App</li>
 							<li>穷游锦囊App</li>
 						</ul>
