--- a/app.html
+++ b/app.html
@@ -11,7 +11,7 @@
 	<div class="header">
 		<div class="h_left">
 			<a href="index.html">
-				<img src="images/s_logo.png" alt="">
+				<img src="images/index_logo1.jpg" alt="">
 			</a>
 		</div>
 		<div class="h_center">
@@ -150,13 +150,13 @@
 					<input type="button" class="btn2" value="本地下载">
 					<input type="button" class="btn3">
 					<div class="scan">
-						<img src="images/app_scanbig.svg" alt="">
+						<img src="images/index_logo1.jpg" alt="">
 					</div>
 				</div>
 
 				<div class="right_footer">
 					<div class="box1">
-						<img src="images/app_logo.png" alt="">
+						<img src="images/index_logo1.jpg" alt="">
 						<span>云高黎贡</span>
 					</div>
 					<div class="box2">
