--- a/community.html
+++ b/community.html
@@ -20,7 +20,7 @@
 				<span>扫码下载</span>
 				<div class="tour_app">
 					<p>下载穷游APP</p>
-					<img src="images/icon_app.png" alt="">
+					<img src="images/index_logo1.jpg" alt="">
 				</div>
 			</li>
 			<li>
@@ -33,7 +33,7 @@
 	<div class="header">
 		<div class="h_left">
 			<a href="index.html">
-				<img src="images/s_logo.png" alt="">
+				<img src="images/index_logo1.jpg" alt="">
 			</a>
 		</div>
 		<div class="h_center">
