--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<div class="hander">
 		<div class="hander_han">
 			<div class="hander_logo">
-			<a href="index.html"><img alt="" src="images/index_logo.png" ></a>
+			<a href="index.html"><img alt="" src="images/index_logo1.jpg" ></a>
 			</div>
 			<ul class="hander_nav">
 				<li class="hander_nav_li">
@@ -1399,11 +1399,11 @@
 							<span>穷游app</span>
 						</li>
 						<li>
-							<img src="images/index_logo2.png" alt="">
+							<img src="images/index_logo1.jpg" alt="">
 							<span>行程助手</span>
 						</li>
 						<li>
-							<img src="images/index_logo3.png" alt="">
+							<img src="images/index_logo1.jpg" alt="">
 							<span>穷游锦囊</span>
 						</li>
 					</ul>
@@ -1412,19 +1412,19 @@
 				<span>微信号</span>
 					<ul>
 						<li>
-							<img src="images/index_ma1.png" alt="">
+							<img src="images/index_logo1.jpg" alt="">
 							<span>云高黎贡</span>
 						</li>
 						<li>
-							<img src="images/index_ma2.png" alt="">
+							<img src="images/index_logo1.jpg" alt="">
 							<span>穷游最世界</span>
 						</li>
 						<li>
-							<img src="images/index_ma3.png" alt="">
+							<img src="images/index_logo1.jpg" alt="">
 							<span>穷游锦囊</span>
 						</li>
 						<li>
-							<img src="images/index_ma4.png" alt="">
+							<img src="images/index_logo1.jpg" alt="">
 							<span>行程助手</span>
 						</li>
 					</ul>
@@ -1436,12 +1436,12 @@
 		<div class="footer_wapper1 center">
 			<ul>
 				<li>关于我们</li>
-				<li>穷游简介</li>
+				<li>项目简介</li>
 				<li>联系我们</li>
 				<li>合作伙伴</li>
 			</ul>
 			<ul>
-				<li>加入穷游</li>
+				<li>加入我们</li>
 				<li>招聘职位</li>
 			</ul>
 			<ul>
@@ -1459,73 +1459,10 @@
 				<li>旅行工具</li>
 			</ul>
 		</div>
-		<div class="footer_wapper2">
-			<div class="center">
-				<div class="center_logo">
-					<img src="images/index_footer_logo1.png" alt="">
-					<p>2004-2018 © 穷游网® qyer.com All rights reserved. Version v5.57  京ICP备12003524号  京公网安备11010102001935  京ICP证140673号  营业执照  经营许可证
-</p>
-<p>穷游网为旅行者提供原创实用的出境游旅行指南和旅游攻略、旅行社区和问答交流平台，并提供签证、保险、机票、酒店预订、租车等服务。</p>
-	<div><img src="images/index_footer_logo2.png" alt="">
-<img src="images/index_footer_logo3.jpg" alt=""></div>
+
 
 				</div>
-				<div class="center_link">
-					<span>友情链接</span>
-						<p>
-						<a href="#" target="_blank">交通查询</a>
-						<a href="#">租租车</a>
-						<a href="#" target="_blank">美术教育</a>
-						<a href="#" target="_blank">中国交通网</a>
-						<a href="#" target="_blank">长途汽车票</a>
-						<a href="#" target="_blank">旅游网</a>
-						<a href="#" target="_blank">首都航空</a>
-						<a href="#" target="_blank">在线教育</a>
-						<a href="#" target="_blank">金运之旅</a>
-						<a href="#" target="_blank">豌豆荚安卓市场</a>
-						<a href="#" target="_blank">凤凰网旅游</a>
-						<a href="#" target="_blank">凯撒旅游</a>
-						<a href="#" target="_blank">神州租车</a>
-						<a href="#" target="_blank">国际租车</a>
-						<a href="#" target="_blank">携程攻略社区</a>
-						<a href="#" target="_blank">蜂鸟网</a>
-						<a href="#" target="_blank">天巡国际机票</a>
-						<a href="#" target="_blank">游谱旅行网 </a>
-						<a href="#" target="_blank">中国签证资讯网</a>
-						<a href="#" target="_blank">梦之旅</a>
-						<a href="#" target="_blank">九游网</a>
-						<a href="#" target="_blank">北京国旅官网</a>
-						<a href="#" target="_blank">同程旅游</a>
-						<a href="#" target="_blank">相约久久旅游网</a>
-						<a href="#" target="_blank">途牛旅游网</a>
-						<a href="#" target="_blank">日租房</a>
-						<a href="#" target="_blank">遨游网</a>
-						<a href="#" target="_blank">携程旅游网</a>
-						<a href="#" target="_blank">春秋航空</a>
-						<a href="#" target="_blank">搜狗壁纸</a>
-						<a href="#" target="_blank">户外资料网</a>
-						<a href="#" target="_blank">爱旅行网</a>
-						<a href="#" target="_blank">途风网</a>
-						<a href="#" target="_blank">神舟国旅</a>
-						<a href="#" target="_blank">拉拉勾旅游网</a>
-						<a href="#" target="_blank">火车票</a>
-						<a href="#" target="_blank">劲旅网</a>
-						<a href="#" target="_blank">米胖旅游网</a>
-						<a href="#" target="_blank">五分旅游网</a>
-						<a href="#" target="_blank">绿野网</a>
-						<a href="#" target="_blank">天气预报15天查询</a>
-						<a href="#" target="_blank">走遍欧洲</a>
-						<a href="#" target="_blank">酒店预订</a>
-						<a href="#" target="_blank">欣欣旅游网</a>
-						<a href="#" target="_blank">驴妈妈旅游网</a>
-						<a href="#" target="_blank">多多驿站</a>
-						<a href="#" target="_blank">艺龙旅游指南</a>
-					</p>
-				</div>
-			</div>
-		</div>
-	</div>
-	
+
 
 	<div class="tour_fixed">
 		<ul>
