--- a/questions.html
+++ b/questions.html
@@ -33,7 +33,7 @@
 	<div class="header">
 		<div class="h_left">
 			<a href="index.html">
-				<img src="images/s_logo.png" alt="">
+				<img src="images/index_logo1.jpg" alt="">
 			</a>
 		</div>
 		<div class="h_center">
