--- a/article1.html
+++ b/article1.html
@@ -22,6 +22,7 @@
 </div>
 <div class="main">
   <div class="article">
+    <div class="acticle_1_img"><img src="images/小鸟.jpg" width="720" ></div>
     <h1 class="title">大树杜鹃</h1>
     <div class="status">发布于：2023-5-01 | 阅读：3500 | 标签：#旅游 #HTML</div>
     <div class="content">
@@ -34,7 +35,7 @@
       </div>
       <div>保护区对大树杜鹃进行严格管护、动态监测和数据采集；昆明植物园等机构对大树杜鹃进行了采种育苗栽培。
       </div>
-      <div class="acticle_1_img"><img src="images/大树杜鹃2.webp" ></div>
+
     </div>
   </div>
 </div>
