--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 					<li><img src="images/sleep.png" alt="">旅游路线</li>
 				</ul>
 				<div class="search_input">
-					<input type="text" placeholder="智利" class="txt">
+					<input type="text" placeholder="高黎贡" class="txt">
 					<input type="button" value="搜索" class="btn">
 				</div>
 			</div>
@@ -174,7 +174,7 @@
 					<div class="con_1_img"><img src="images/白眉长臂猿1.png" width="275" height="185"></div>
 					<div class="mgs">
 						<p>白眉长臂猿</p>
-						<span>云南</span>
+						<a href="article1.html" class="logo">生物图鉴</a>
 						<span>高黎贡</span>
 					</div>
 				</li>
@@ -182,7 +182,7 @@
 					<div class="con_1_img"><img src="images/白尾梢虹雉1.png" width="275" height="185"></div>
 					<div class="mgs">
 						<p>白尾梢虹雉</p>
-						<a href="article1.html" class="logo">点击查看详情</a>
+						<a href="article1.html" class="logo">生物图鉴</a>
 						<span>高黎贡</span>
 					</div>
 				</li>
