--- a/index.html
+++ b/index.html
@@ -171,21 +171,24 @@
 			<h2 class="title">珍稀物种</h2>
 			<ul class="con_1_ul">
 				<li>
+					<a href="article1.html" class="logo">
 					<div class="con_1_img"><img src="images/白眉长臂猿1.png" width="275" height="185"></div>
+				</a>
 					<div class="mgs">
 						<p>白眉长臂猿</p>
-						<a href="article1.html" class="logo">生物图鉴</a>
+						<span>点击查看详情</span>
 						<span>高黎贡</span>
 					</div>
 				</li>
 				<li>
+					<a href="article2.html" class="logo">
 					<div class="con_1_img"><img src="images/白尾梢虹雉1.png" width="275" height="185"></div>
+				</a>
 					<div class="mgs">
 						<p>白尾梢虹雉</p>
-						<a href="article1.html" class="logo">生物图鉴</a>
+						<span>点击查看详情</span>
 						<span>高黎贡</span>
 					</div>
-				</li>
 				<li>
 					<div class="con_1_img"><img src="images/戴帽乌叶猴1.jpg" width="275" height="185"></div>
 					<div class="mgs">
@@ -195,7 +198,9 @@
 					</div>
 				</li>
 				<li>
+					<a href="article3.html" class="logo">
 					<div class="con_1_img"><img src="images/贡山羚牛1.webp" width="275" height="185"></div>
+				</a>
 					<div class="mgs">
 						<p>贡山羚牛</p>
 						<span>点击查看详情</span>
