--- a/index.html
+++ b/index.html
@@ -110,10 +110,26 @@
 
 			<div class="img_search">
 				<ul>
-					<li><img src="images/locall.png" alt="">目的地</li>
-					<li><img src="images/bag.png" alt="">做行程</li>
-					<li><img src="images/tag.png" alt="">买折扣</li>
-					<li><img src="images/sleep.png" alt="">旅游路线</li>
+					<li>
+						<a href="index.html" class="logo">
+						<img src="images/locall.png" alt=""></a>
+						<p>首页</p>
+					</li>
+					<li>
+						<a href="test2.html" class="logo">
+						<img src="images/bag.png" alt=""></a>
+						<p>深度探索</p>
+					</li>
+					<li>
+						<a href="questions.html" class="logo">
+						<img src="images/tag.png" alt=""></a>
+						<p>社区问答</p>
+					</li>
+					<li>
+						<a href="app.html" class="logo">
+						<img src="images/sleep.png" alt=""></a>
+						<p>云高黎贡</p>
+					</li>
 				</ul>
 				<div class="search_input">
 					<input type="text" placeholder="高黎贡" class="txt">
